cw2 lvl1 fix3